Bug 514634. Remove unneeded second call to SetNextSibling, add some assertions, and fix a comment. r=fantasai

--HG--
extra : rebase_source : ab9ca9100ae41a022c4a0c129f98d5918d3c8c44